--- a/plugin.xml
+++ b/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
      xmlns:android="http://schemas.android.com/apk/res/android"
-     id="cordova-plugin-jcore"
+     id="cordova-plugin-android-jcore"
      version="1.3.3">
 
     <name>JCore</name>
@@ -26,7 +26,4 @@
         <lib-file src="src/android/jcore-android-2.3.8.jar" />
     </platform>
 
-    <platform name="ios">
-        <source-file src="src/ios/jcore-ios-2.2.5.a" framework="true" />
-    </platform>
 </plugin>
